--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,41 @@
+html{
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  color: #51749f;
+  text-decoration: none;
+}
+
+header{
+  width: 100%;
+  height: 200px;
+  background: #bdbdbd;
+  position: fixed;
+  z-index: 10;
+}
+
+  #header-content {
+    width: 1000px; margin: 0 auto; padding: 35px 0 0 0;
+    overflow: hidden;
+  }
+    #header-content nav{
+      float: right;
+    }
+      #header-content nav li{
+        float: left;
+        font-size: 20px;
+        margin: 0 0 0 50px;
+        list-style: none;
+      }
+
 h1{
   color: red;
   text-align: center;
   text-decoration: underline;
   font-family: "Comics Sans MS";
+  margin-top: 0;
 }
 
 /*like a class*/
@@ -26,4 +59,20 @@ h1{
   width: 90%;
   height: 100%;
   border: 1px solid black;
+}
+
+#banner{
+  width: 100%;
+  height: 300px;
+  position: fixed;
+  top: 100px;
+  background: #707070;
+}
+
+#content {
+  width: 100%;
+  position: relative;
+  top: 400px;
+  background: #ebebeb;
+  height: 1500px;
 }
