--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,57 @@
-html{
+html, body{
   padding: 0;
   margin: 0;
-}
-
-a {
-  color: #51749f;
-  text-decoration: none;
+  border: 0;
+  vertical-align: baseline;
 }
 
 header{
   width: 100%;
-  height: 200px;
+  height: 100px;
   background: #bdbdbd;
   position: fixed;
   z-index: 10;
+  top: 0;
 }
 
   #header-content {
     width: 1000px; margin: 0 auto; padding: 35px 0 0 0;
     overflow: hidden;
   }
+    #header-content h1{
+      float: left;
+      font-family: "Helvetica", Arial, sans-serif;
+    }
+      #header-content h1 a{
+        text-decoration: none;
+        color: white;
+      }
     #header-content nav{
       float: right;
     }
-      #header-content nav li{
-        float: left;
-        font-size: 20px;
-        margin: 0 0 0 50px;
-        list-style: none;
+      #header-content nav ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
       }
+        #header-content nav li{
+          float: left;
+          font-family: "Helvetica", Arial, sans-serif;
+        }
+
+          #header-content nav li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+          }
+
+            #header-content nav li a:hover {
+              background-color: #111;
+            }
 
 h1{
   color: red;
@@ -55,15 +78,9 @@ h1{
   width: 100px;
 }
 
-.blog{
-  width: 90%;
-  height: 100%;
-  border: 1px solid black;
-}
-
 #banner{
   width: 100%;
-  height: 300px;
+  height: 500px;
   position: fixed;
   top: 100px;
   background: #707070;
