--- a/css/styles.css
+++ b/css/styles.css
@@ -133,3 +133,10 @@ header{
     float: left;
     margin: 15px;
 }
+
+#test {
+  font-size: 40px;
+  font-family: Arial;
+  color: white;
+  text-align: center;
+}
