--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ header{
   display: inline-block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 18px 16px;
   text-decoration: none;
   transition: 0.3s;
   font-size: 17px;
@@ -73,8 +73,6 @@ header{
 #header-content ul.topnav .dropdown:hover .dropdown-content {
     display: block;
 }
-
-
 
 
 #banner{
@@ -138,5 +136,26 @@ header{
   font-size: 40px;
   font-family: Arial;
   color: white;
+  text-align: center;
+}
+
+.contactInfo{
+  top: auto;
+  height: 100%;
+}
+
+.contactInfo #page {
+  font-size: 40px;
+  font-family: Helvetica, Arial;
+  color: white;
+  text-align: center;
+  height: 600px;
+  position: relative;
+  top: 50%;
+}
+
+.contactInfo #page h1 {
+  position: relative;
+  top: 35%;
   text-align: center;
 }
