--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ html, body {
   border: 0;
   vertical-align: baseline;
   background-color: #ebebeb;
+  font-size: 8px;
   font-family: "Helvetica";
 }
 
@@ -30,7 +31,7 @@ html, body {
 .subsection {
   display: flex;
   position: relative;
-  flex-flow: column wrap;
+  flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
   background: white;
@@ -39,7 +40,7 @@ html, body {
 }
 
 .subsection h2 {
-  align-self: flex-start;
+  align-self: center;
   color: #561832;
   font-size: 3em;
   margin: 0;
@@ -50,6 +51,10 @@ html, body {
   position: absolute;
   left: 0;
   top: 0;
+}
+
+.icon {
+  width: 3em;
 }
 
 .subsection-p {
@@ -92,11 +97,10 @@ html, body {
   position: relative;
   padding: 1em;
   width: 100%;
-  height: 480px;
+  height: 30%;
   color: white;
   background-image: url('../img/banner.jpg');
-  background-size: cover;
-  background-attachment: fixed;
+  background-size: 100% 100%;
   background-position: center;
 }
 
@@ -166,4 +170,24 @@ html, body {
 
 #nav-bar li a:hover{
   background: #281D3C;
+}
+
+@media only screen and (min-width: 768px) {
+    body {
+      font-size: 16px;
+    }
+    .subsection {
+      flex-flow: column wrap;
+    }
+    .subsection h2 {
+      align-self: flex-start;
+    }
+    #banner {
+      height: 60%;
+      background-size: cover;
+      background-attachment: fixed;
+    }
+    .icon {
+      width: 100%;
+    }
 }
