Changed styling to make navigation easier, updated resume

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ html, body {
   padding: 0.25em;
   margin: 0;
   font-size: 1em;
-  background: #561832;
+  background: #523953;
   color: white;
   border-radius: 0.25em;
   text-align: center;
@@ -84,6 +84,12 @@ html, body {
   background: #281D3C;
   text-align: center;
   color: white;
+  border-top-left-radius: 0.4em;
+  border-bottom-right-radius: 0.4em;
+}
+
+.info-head:hover {
+  background: #3f3159;
 }
 
 .info-detail {
@@ -106,6 +112,10 @@ html, body {
   text-align: center;
   margin: .5em 0 .5em 0;
   padding: .25em;
+}
+
+.course-name:hover {
+  background: #362e6b;
 }
 
 .course-description {
@@ -142,6 +152,7 @@ html, body {
   object-fit: contain;
   height: 50%;
   width: 50%;
+  padding: 1em;
   transform: rotate(90deg);
 }
 
