--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ html, body {
   flex-flow: column wrap;
   justify-content: center;
   width: 70%;
-  background: #3B293C;
+  background: rgba(59, 41, 60, 0.9);
   padding: 0.25em;
   top: -12em;
 }
@@ -173,7 +173,8 @@ html, body {
 }
 
 #banner {
-  display: block;
+  display: flex;
+  flex-direction: column;
   position: relative;
   padding: 1em;
   width: 100%;
@@ -186,6 +187,7 @@ html, body {
 
 #banner h1 {
   text-align: center;
+  margin-top: 5em;
 }
 
 #banner-img {
@@ -194,6 +196,8 @@ html, body {
 }
 
 #story {
+  width: 70%;
+  text-align: center;
   font-size: 1.5em;
   background: rgba(0, 0, 0, .7);
 }
@@ -206,7 +210,7 @@ html, body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background: #523953;
+  background: transparent;
 }
 
 
@@ -221,7 +225,7 @@ html, body {
 }
 
 #utility-bar li a:hover {
-  background: #3B293C;
+  background: rgba(0, 0, 0, 0.85);
 }
 
 #nav-bar {
