--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ html, body {
   position: relative;
   flex-flow: column wrap;
   justify-content: center;
-  width: 70%;
+  width: 80%;
   background: rgba(0, 0, 0, 0.9);
   padding: 0.25em;
   top: -12em;
@@ -43,12 +43,12 @@ html, body {
 
 .subsection-head {
   position: relative;
-  top: -2em;
-  left: -2em;
+  top: -1em;
+  left: -1em;
   display: flex;
   flex-flow: column wrap;
   justify-content: flex-start;
-  width: 20%;
+  width: 30%;
 }
 
 .subsection h2 {
@@ -71,7 +71,17 @@ html, body {
 }
 
 .subsection-body {
-  width: 80%;
+  padding-left: 1em;
+  width: 70%;
+}
+
+.subsection-body-image {
+  width: 30%;
+}
+
+.subsection-body-wrapper {
+  width: 100%;
+  display: flex;
 }
 
 .icon {
@@ -149,11 +159,11 @@ html, body {
 }
 
 .profile {
+  position: relative;
+  left: -.75em;
   object-fit: contain;
-  height: 50%;
-  width: 50%;
-  padding: 1em;
-  transform: rotate(90deg);
+  width: 100%;
+  padding-top: 2.5em;
 }
 
 #utility-bar {
@@ -187,7 +197,7 @@ html, body {
 
 #banner h1 {
   text-align: center;
-  margin-top: 5em;
+  margin-top: 2.25em;
   color: #f4ebeb;
 }
 
@@ -234,8 +244,10 @@ html, body {
 
 .side-scroll-utility {
   position: fixed;
-  flex-direction: column;
-  height: 60%;
+  flex-direction: row;
+  width: 98%;
+  bottom: 0;
+  left: 0;
   background: rgba(0, 0, 0, .6);
 }
 
@@ -282,7 +294,22 @@ html, body {
       background-position: left;
       background-attachment: fixed;
     }
+    #banner h1 {
+      margin-top: 4.5em;
+    }
+    #main-content {
+      width: 76%;
+    }
     .icon {
       width: 100%;
+    }
+    .side-scroll-utility {
+      position: fixed;
+      top: 1em;
+      left: inherit;
+      width: auto;
+      flex-direction: column;
+      height: 60%;
+      background: rgba(0, 0, 0, .6);
     }
 }
