--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ html, body {
   vertical-align: baseline;
   background-color: #ebebeb;
   font-size: 8px;
-  font-family: "Helvetica";
+  font-family: 'Lato', sans-serif, 'Helvectica';
 }
 
 .main-container {
@@ -61,6 +61,9 @@ html, body {
   border-radius: 0.25em;
   text-align: center;
   margin: .25em;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.5em;
 }
 
 .subsection-icon {
@@ -76,16 +79,21 @@ html, body {
 }
 
 .subsection-body-image {
+  position: relative;
+  left: -1em;
   width: 30%;
+  text-align: center;
 }
 
 .subsection-body-wrapper {
   width: 100%;
   display: flex;
+  padding: 1em 0 1em 0;
 }
 
 .icon {
-  width: 3em;
+  width: 5em;
+  height: 5em;
 }
 
 .info-head {
@@ -102,8 +110,14 @@ html, body {
   background: #3f3159;
 }
 
-.info-detail {
+.info-detail-container {
  display: none;
+}
+
+.info-detail {
+  display: flex;
+  padding-top: 1em;
+  justify-content: space-between;
 }
 
 .courses {
@@ -159,11 +173,8 @@ html, body {
 }
 
 .profile {
-  position: relative;
-  left: -.75em;
   object-fit: contain;
-  width: 100%;
-  padding-top: 2.5em;
+  width: 75%;
 }
 
 #utility-bar {
@@ -199,6 +210,9 @@ html, body {
   text-align: center;
   margin-top: 2.25em;
   color: #f4ebeb;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 200;
+  letter-spacing: 0.03125em;
 }
 
 #banner-img {
@@ -245,43 +259,12 @@ html, body {
 .side-scroll-utility {
   position: fixed;
   flex-direction: row;
-  width: 98%;
+  align-items: center;
+  width: 100%;
+  height: 6em;
   bottom: 0;
   left: 0;
   background: rgba(0, 0, 0, .6);
-}
-
-#nav-bar {
-  width: 100%;
-  height: 3em;
-  position: relative;
-  z-index: 3;
-  top: 0;
-}
-
-#nav-bar ul {
-  display: flex;
-  height: 100%;
-  justify-content: flex-start;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background: #382853;
-}
-
-#nav-bar li a {
-  display: inline-block;
-  text-align: center;
-  color: white;
-  font-weight: bold;
-  padding: 1em;
-  font-family: "Helvectica", Arial;
-  text-decoration: none;
-}
-
-#nav-bar li a:hover{
-  background: #281D3C;
 }
 
 @media only screen and (min-width: 768px) {
@@ -296,6 +279,7 @@ html, body {
     }
     #banner h1 {
       margin-top: 4.5em;
+      letter-spacing: 0.125em;
     }
     #main-content {
       width: 76%;
@@ -305,7 +289,7 @@ html, body {
     }
     .side-scroll-utility {
       position: fixed;
-      top: 1em;
+      top: 7.25em;
       left: inherit;
       width: auto;
       flex-direction: column;
