--- a/css/styles.css
+++ b/css/styles.css
@@ -321,7 +321,7 @@ html, body {
       background-attachment: fixed;
     }
     #banner h1 {
-      margin-top: 4em;
+      margin-top: 4.5em;
       letter-spacing: 0.125em;
     }
     .top-utility-bar {
@@ -341,7 +341,7 @@ html, body {
     }
     #main-content {
       width: 78%;
-      top: -12em;
+      top: -24em;
     }
     .subsection h2 {
       letter-spacing: 0.5em;
@@ -368,6 +368,19 @@ html, body {
 
 @media only screen and (min-width: 1200px) {
   #banner h1 {
-    top: 6em;
+    position: relative;
+    font-size: 2em;
+  }
+  #main-content {
+    top: -12em;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  #banner {
+    height: 70%;
+  }
+  #main-content {
+    top: -12em;
   }
 }
