--- a/css/styles.css
+++ b/css/styles.css
@@ -201,7 +201,7 @@ html, body {
   position: relative;
   padding: 1em;
   width: 100%;
-  height: 30%;
+  height: 30em;
   color: white;
   background-image: url('../img/banner.jpg');
   background-size: 100% 100%;
@@ -209,6 +209,7 @@ html, body {
 }
 
 #banner h1 {
+  align-self: center;
   text-align: center;
   margin-top: 2.25em;
   color: #f4ebeb;
@@ -282,30 +283,28 @@ html, body {
   font-size: 2em;
 }
 
-@media only screen and (min-width: 641px) {
-  #banner {
-    background-size: cover;
+@media only screen and (min-width: 568px) {
+  #main-content {
+    top: -3em;
   }
+}
+
+@media only screen and (min-width: 641px) {
   #banner h1 {
-    margin-top: -0.25em;
+    position: relative;
+    top: -2em;
   }
   #main-content {
-    top: -8em;
+    top: -20em;
   }
 }
 
 @media only screen and (min-width: 768px) {
   #banner h1 {
-    margin-top: 2em;
+    top: 3em;
   }
   #main-content {
-    top: -24em;
-  }
-}
-
-@media only screen and (min-width: 961px) {
-  #banner h1 {
-    margin-top: 6em;
+    top: -12em;
   }
 }
 
@@ -315,13 +314,12 @@ html, body {
       font-size: 16px;
     }
     #banner {
-      height: 60%;
+      height: 32em;
       background-size: cover;
       background-position: left;
       background-attachment: fixed;
     }
     #banner h1 {
-      margin-top: 4.5em;
       letter-spacing: 0.125em;
     }
     .top-utility-bar {
@@ -341,7 +339,7 @@ html, body {
     }
     #main-content {
       width: 78%;
-      top: -24em;
+      top: -12em;
     }
     .subsection h2 {
       letter-spacing: 0.5em;
@@ -367,10 +365,6 @@ html, body {
 }
 
 @media only screen and (min-width: 1200px) {
-  #banner h1 {
-    position: relative;
-    font-size: 2em;
-  }
   #main-content {
     top: -12em;
   }
@@ -378,9 +372,18 @@ html, body {
 
 @media only screen and (min-width: 1440px) {
   #banner {
-    height: 70%;
+    height: 34em;
   }
   #main-content {
     top: -12em;
+  }
+}
+
+@media only screen and (min-width: 2560px) {
+  html, body {
+    font-size: 1.25em;
+  }
+  .profile {
+    width: 60%;
   }
 }
