Added tipoff blog

--- a/css/styles.css
+++ b/css/styles.css
@@ -286,6 +286,22 @@ html, body {
   width: 90%;
 }
 
+.blog-post {
+  flex-direction: column;
+}
+
+.blog-image-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.blog-image {
+  border: 0.25em solid;
+  max-width: 40%;
+  height: auto;
+}
+
 @media only screen and (min-width: 320px) {
   #banner h1 {
     position: relative;
@@ -395,5 +411,3 @@ html, body {
     width: 60%;
   }
 }
-
-
